--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,37 +3,73 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: linear-gradient(black, white);
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #010101;
     --foreground: #ededed;
   }
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  /* background: var(--background); */
+  background: linear-gradient(60deg, black, #333333, black);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes rotateBackgroundGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .pre-wrapper {
   display: block;
   width: 100%;
   overflow: hidden;
-  background-color: yellow;
   color: black;
   font-weight: bold;
+
+  &.bgPink {
+    background-color: pink;
+  }
+
+  &.bgYellow {
+    background-color: yellow;
+  }
+
+  &.bgLime {
+    background-color: lime;
+  }
+
+  &,
+  &.bgGadient {
+    background: linear-gradient(15deg, pink, lime, orange, yellow, red);
+    background-size: 1000% 400%;
+    animation: rotateBackgroundGradient 20s ease-in-out infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 pre {
+  /* --size: calc(5px + 0.14vw); */
+  --size: 6px;
+
   white-space: pre;
   font-family: monospace;
-  font-size: 6px;
-  line-height: 6px;
+  font-size: var(--size);
+  line-height: var(--size);
   letter-spacing: unset;
   transform: unset;
   overflow-y: hidden;
