--- a/src/components/Outcome/Outcome.module.css
+++ b/src/components/Outcome/Outcome.module.css
@@ -13,4 +13,10 @@
   &.outcomeYes {
     color: lime;
   }
+
+  @media screen and (max-aspect-ratio: 1 / 1), screen and (max-width: 640px) {
+    font-size: calc(100vw * 0.379);
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
