--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,27 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #bbbbbb;
-  --foreground: #171717;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #010101;
-    --foreground: #ededed;
-  }
-} */
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  background-size: 100% 100%;
-  font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
-
-  ::selection {
-    color: red;
-    background-color: yellow;
-  }
-}
+@import "./transitions.css";
