--- a/src/components/ArtGallery/ArtGallery.module.css
+++ b/src/components/ArtGallery/ArtGallery.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   position: absolute;
-  background-color: black;
   width: 100%;
   height: 100%;
+  background-color: black;
+  overflow: hidden;
 }
