--- a/src/components/AsciiArtFrame/AsciiArtFrame.module.css
+++ b/src/components/AsciiArtFrame/AsciiArtFrame.module.css
@@ -1,4 +1,4 @@
-.artworkWrapper {
+.artworkFrame {
   --bg-transform-x: 0%;
   --bg-transform-y: 0%;
 
@@ -17,7 +17,7 @@
     calc(var(--bg-transform-y) * 0.5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  transition: background-position 2s ease-out;
+  transition: background-position 1s ease-out;
 }
 
 .artwork {
@@ -32,6 +32,7 @@
   transform: unset;
   overflow-y: hidden;
   display: block;
+  user-select: none;
 
   @media screen and (max-aspect-ratio: 1.75 / 1) {
     --size: calc(100vh / 120);
