--- a/src/components/ArtGallery/ArtGallery.module.css
+++ b/src/components/ArtGallery/ArtGallery.module.css
@@ -1,7 +1,17 @@
 .wrapper {
+  --bg-color: white;
+  --bg-color-funky: black;
+
+  --transition-easing-method: var(--tr-ease-out-expo);
+
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: black;
   overflow: hidden;
+  background-color: var(--bg-color);
+  transition: background-color 0.6s var(--tr-ease-out-expo);
+
+  &.wrapperIsFunky {
+    background-color: var(--bg-color-funky);
+  }
 }
