--- a/src/components/Answer/Answer.module.css
+++ b/src/components/Answer/Answer.module.css
@@ -1,18 +1,18 @@
-.outcome {
+.answer {
   position: absolute;
   top: 50%;
   left: 5vw;
   text-transform: uppercase;
-  font-family: Verdana;
+  font-family: Verdana, Arial, sans-serif;
   transform: translate(0, -50%);
   font-size: calc(100vh * 0.4);
   line-height: 1;
   font-weight: 700;
   user-select: none;
-  color: red;
+  color: var(--negative-color);
 
-  &.outcomeYes {
-    color: lime;
+  &.answerYes {
+    color: var(--positive-color);
   }
 
   @media screen and (max-aspect-ratio: 1 / 1), screen and (max-width: 640px) {
