--- a/src/components/AsciiArtFrame/AsciiArtFrame.module.css
+++ b/src/components/AsciiArtFrame/AsciiArtFrame.module.css
@@ -22,6 +22,9 @@
 }
 
 .artworkSwapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 
@@ -32,20 +35,14 @@
 }
 
 .artworkFrame {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: block;
-  overflow: hidden;
   color: purple;
   font-weight: bold;
   background: linear-gradient(45deg, indigo, blue);
   background-size: 100% 100%;
   background-position: calc(var(--bg-transform-x) * 0.5),
     calc(var(--bg-transform-y) * 0.5);
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
   transition: background-position 20s var(--tr-ease-out-quart);
 }
 
